<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_share"
        android:orderInCategory="3"
        android:title="@string/action_share"
        app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/settings_white_18dp"
        android:orderInCategory="1"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:icon="@android:drawable/ic_menu_help"
        android:orderInCategory="2"
        android:title="@string/action_help"
        app:showAsAction="never" />

</menu>