<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/intro_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/sauti_ya_unabii_home_background_image"
            android:scaleType="centerCrop"
            android:src="@drawable/sda_church_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="35dp"
            android:layout_marginRight="10dp"
            android:textAlignment="center"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Mpendwa Heading -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:text="@string/mpendwa_heading"
                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                android:textSize="20sp" />

            <!-- The main intro content -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                android:textAlignment="gravity"
                android:layout_marginTop="8dp"
                android:textIsSelectable="true"
                android:text="@string/mpendwa_intro_content"/>

            <!-- Asante sana content -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textIsSelectable="true"
                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                android:text="@string/asante_sana"/>

            <!-- Mkurugenzi name -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                android:text="@string/mkurugenzi_name"/>

            <!-- Mkurugenzi title -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textIsSelectable="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:text="@string/mkurugenzi_title"/>

        </LinearLayout>

    </FrameLayout>
</androidx.core.widget.NestedScrollView>